# Py-todo-sqlite

./: .gitignore  main.py  pyproject.toml
src/: Add_todo.py  DeleteAll_todos.py  Delete_todo.py  Update_todo.py  View_todos.py  _config.py
